<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/info_layout"
    android:weightSum="10" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/reset_dialog_label" />

    <CheckBox
        android:id="@+id/erase_sdcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
		android:checked="false"
        android:text="@string/reset_erase_sdcard_label" />
    
    <Button 
        android:id="@+id/rest_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factory_data_reset"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>