<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/info_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.7"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:id="@+id/mobiledata_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobiledata_remind"
            android:textColor="@color/Green"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/wifi_test_label_textsize"/>

        <LinearLayout
            android:id="@+id/mobiledata_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mobiledata_view_padding_top"
            android:orientation="horizontal">
            <Button
                android:id="@+id/md_bt_open"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="@dimen/btn_succ_fail_text_size"
                android:text="@string/open" />
            <Button
                android:id="@+id/md_bt_close"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="@dimen/btn_succ_fail_text_size"
                android:text="@string/close" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.3"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Button
            android:id="@+id/md_bt_ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="@dimen/btn_succ_fail_text_size"
            android:text="@string/Success" />
        <Button
            android:id="@+id/md_bt_failed"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="@dimen/btn_succ_fail_text_size"
            android:text="@string/Failed" />
    </LinearLayout>
</LinearLayout>