<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/info_layout">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Button
            android:text="@string/LCD_increase"
            android:id="@+id/Display_lcd_on"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/backlight_btn_height"
            android:textSize="@dimen/btn_succ_fail_text_size"
            android:layout_weight="0.5" />
        <Button
            android:text="@string/LCD_weaken"
            android:id="@+id/Display_lcd_off"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/backlight_btn_height"
            android:textSize="@dimen/btn_succ_fail_text_size"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Button
            android:id="@+id/display_bt_ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="@dimen/btn_succ_fail_text_size"
            android:text="@string/Success" />
        <Button
            android:id="@+id/display_bt_failed"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="@dimen/btn_succ_fail_text_size"
            android:text="@string/Failed" />
    </LinearLayout>
</LinearLayout>