<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/info_layout" >

    <LinearLayout style="@style/entry_layout" >
        <TextView
            style="@style/info_label"
            android:text="@string/otg_status_label"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/status"
            style="@style/info_value"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/otg_state_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/Success"
            android:textSize="25sp" />

        <Button
            android:id="@+id/otg_state_failed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/Failed"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>