<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/info_layout">

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="horizontal">
	  <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate_tips"
            android:textSize="@dimen/vibrate_test_textsize"
            android:textColor="@color/Green" />
	</LinearLayout> 

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.4"
        android:gravity="center_vertical"
        android:orientation="horizontal">
	    <Button
	        android:id="@+id/vibrator_bt_ok"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:textSize="@dimen/btn_succ_fail_text_size"
	        android:text="@string/Success" />
	    <Button
	        android:id="@+id/vibrator_bt_failed"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:textSize="@dimen/btn_succ_fail_text_size"
	        android:text="@string/Failed" />
   </LinearLayout>
</LinearLayout>