<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/info_layout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
        <SurfaceView
            android:id="@+id/camera_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <Button
            android:id="@+id/camera_take"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:text="@string/Camera_takepic"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="@color/Blue" />
        <Button
            android:id="@+id/camera_btok"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:text="@string/Success"
            android:layout_alignParentRight="true"
            android:textSize="20sp" />
        <Button
            android:id="@+id/camera_btfailed"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:text="@string/Failed"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:textSize="20sp" />
    </RelativeLayout>
</FrameLayout>
