<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/info_layout">
    <LinearLayout style="@style/entry_layout"
        android:layout_width="match_parent"
        android:layout_height="250dip"
        android:orientation="vertical">
        <TextView
            android:text="@string/hall_info_status_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            style="@style/info_label" />
        <TextView
            android:id="@+id/status"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/hall_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textSize="25dip"
            android:text="@string/Success" />
        <Button
            android:id="@+id/hall_failed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textSize="25dip"
            android:text="@string/Failed" />
    </LinearLayout>
</LinearLayout>